WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161858
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=161858
Summary
[Win] Warning fix.
Per Arne Vollan
Reported
2016-09-12 04:01:09 PDT
We should fix the following warning: Source\WebCore\platform\spi\win\CoreTextSPIWin.h(39): warning C4273: 'kCTFontAttributeName': inconsistent dll linkage
Attachments
Patch
(1.84 KB, patch)
2016-09-12 04:06 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(3.77 KB, patch)
2016-09-12 05:02 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-09-12 04:06:06 PDT
Created
attachment 288565
[details]
Patch
Per Arne Vollan
Comment 2
2016-09-12 05:02:42 PDT
Created
attachment 288567
[details]
Patch
Brent Fulgham
Comment 3
2016-09-12 09:58:48 PDT
Comment on
attachment 288567
[details]
Patch r=me.
Per Arne Vollan
Comment 4
2016-09-12 23:51:23 PDT
(In reply to
comment #3
)
> Comment on
attachment 288567
[details]
> Patch > > r=me.
Thanks for reviewing!
WebKit Commit Bot
Comment 5
2016-09-12 23:54:38 PDT
Comment on
attachment 288567
[details]
Patch Clearing flags on attachment: 288567 Committed
r205855
: <
http://trac.webkit.org/changeset/205855
>
WebKit Commit Bot
Comment 6
2016-09-12 23:54:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug