[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=161858

Reviewed by Brent Fulgham.

Use exported constants from CoreText.dll, instead of creating copies.

* PlatformAppleWin.cmake:
* platform/spi/win/CoreTextSPIWin.cpp: Removed.
* platform/spi/win/CoreTextSPIWin.h:


Canonical link: https://commits.webkit.org/180054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205855 268f45cc-cd09-0410-ab3c-d52691b4dbfc